# gc-cxx

./: CMakeLists.txt  README.md  example.cpp  gc.cpp  gc.h
bacon_gc/: gc.cpp  gc.h
gc/: gc.h
tests/: CMakeLists.txt  test_gc.cpp  test_gc.h
